Ticket #4065 - Timeline: Jump To switcher issues.

--- a/modules/boonex/timeline/template/css/view.css
+++ b/modules/boonex/timeline/template/css/view.css
@@ -173,11 +173,7 @@ div.bx-tl-jump-to .bx-btn {
     float: none;
 }
 div.bx-tl-jump-to .bx-tl-jump-to-calendar {
-    position: relative;
-    display: inline-block;
-    visibility: hidden;
-    width: 0;
-    height: 100%;
+    width: 100%;
 }
 
 
